[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/musicPlayer.gd" type="Script" id=1]
[ext_resource path="res://docs/final mixes/title.wav" type="AudioStream" id=2]
[ext_resource path="res://docs/final mixes/dungeon.wav" type="AudioStream" id=3]
[ext_resource path="res://docs/final mixes/debug town.wav" type="AudioStream" id=4]
[ext_resource path="res://docs/final mixes/lucky cat casino.wav" type="AudioStream" id=5]
[ext_resource path="res://docs/final mixes/poison forest.wav" type="AudioStream" id=6]

[node name="musicPlayer" type="Node" index="0"]

script = ExtResource( 1 )

[node name="TitleThemePlayer" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="DungeonThemePlayer" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = -15.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="DebugThemePlayer" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="CasinoThemePlayer" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ToxicThemePlayer" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"


